--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -201,27 +201,13 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <img src="images/components-products-uploaded-binary.png" alt=""></p>
 <p><br>
 </br></p>
-<h2 id="pre-requisites-and-best-practices"><strong>Pre-requisites and best practices:</strong></h2>
-<ul>
-<li>ensure that the component name also has information about its version;</li>
-<li>ensure that the component format that you upload is correct and as delivered by the Temenos team;</li>
-</ul>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-  the format of the package as delivered by Temenos will as well be supported in TCD.  </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-<ul>
-<li>if the <strong>Help text</strong> file of T24 is given as a .zip, the templates will expect a .zip file for the same,</li>
-</ul>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - DS pakages will have the same packaging as bundled by Design Studio</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - T24 updates are bundled in zip;</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - you need to get from Temenos distribution team the Toolbox kit that will allow you to generate the system definition file of your T24 environment;</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - you will be able to download the T24 updates correspondent to your environments from the Temenos Customer Support Portal by uploading the system definition file generated above;</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - once the updates are downloaded from the portal in a .zip file, you must create another .zip of that downloaded .zip file and only then  place it into the artifactory under the correspondent component;</p>
-<ul>
-<li>ensure that components are uploaded to the appropriate folders (the URL and folder names can be found from the component definition pages of the TCD portal);</li>
-<li>if the component is uploaded in a .zip format, it it recommended to have a text file describing what is included in the package/ provide reference to the code commit tags to find what is included in the package;</li>
-<li>do not delete/ edit/ create components/ folders in the artifactory.  TCD Portal’s Product and Component sections must be used to create anything in artifactory;</li>
-<li>our recommendation is to retain the last 10 components in every stage;</li>
-</ul>
+<h1 id="pre-requisites-and-best-practices">Pre-requisites and best practices</h1>
+<p>•   ensure that the component name also has information about its version;</p>
+<p>•   ensure that the component format that you upload is as expected by TCD. (Every product has got an template overview page (&lt;<give a="" link="" to="" the="" transact="" template="" overview="" page="">&gt;), which gives this info)<p>
+<p>•   ensure that components are uploaded to the appropriate folders (the URL and folder names can be found from the component definition pages of the TCD portal);</p>
+<p>•   if the component is uploaded in a .zip format, it is recommended to have a text file describing what is included in the package/ provide reference to the code commit tags to find what is included in the package;</p>
+<p>•   do not delete/ edit/ create components/ folders in the artifactory. TCD Portal’s Product and Component sections must be used to create anything in artifactory;</p>
+<p>•   our recommendation is to retain the last 25 components in every stage.</p>
 <p><br>
 </br></p>
 <h1 id="which-components-to-add">Which Components to Add</h1>
@@ -321,7 +307,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li>DELETE _ PRODUCT</li>
 </ul>
 <p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
-<p><br></p>
+</give><p><br></p>
               <hr>
               
               <div id="disqus_thread"></div>
