--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -234,10 +234,10 @@
 <p>Temenos Continuous Deployment provides users the ability to deploy one or more Design Studio packages into the environment. This pages explains what happens in the background when packages are deployed to the environment.</p>
 <ul>
 <li><p>one or more DS packages which with the .jar extension can be added directly into the Git folder packages as shown below.
-<img src="./images/ds-installation.png" alt=""></p>
+<img src="images/ds-installation.png" alt=""></p>
 </li>
 <li><p>one or more DS packages can be bundled into a .zip file and put under the Git folder packages/l3 folder </p>
-<p><img src="./images/ds-installation-l3packages.png" alt=""></p>
+<p><img src="images/ds-installation-l3packages.png" alt=""></p>
 </li>
 <li><p>the following files are cleared from the environment:</p>
 <pre><code>    &lt;T24_HOME&gt;/packages
