--- a/home/toc.html
+++ b/home/toc.html
@@ -178,6 +178,9 @@
                     <a href="techguides/components-products.html" name="" title="Manage Components and Products">Manage Components and Products</a>
                   </li>
                   <li>
+                    <a href="techguides/manage-workflows.html" name="" title="Manage Workflows">Manage Workflows</a>
+                  </li>
+                  <li>
                     <a href="techguides/factories.html" name="" title="Manage Factories">Manage Factories</a>
                   </li>
                   <li>
