--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -202,11 +202,11 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <p><br>
 </br></p>
 <h1 id="pre-requisites-and-best-practices">Pre-requisites and best practices</h1>
-<p>•   ensure that the component name also has information about its version;</p>
-<p>•   ensure that the component format that you upload is as expected by TCD. (Every product has got an template overview page (&lt;<give a="" link="" to="" the="" transact="" template="" overview="" page="">&gt;), which gives this info)<p>
-<p>•   ensure that components are uploaded to the appropriate folders (the URL and folder names can be found from the component definition pages of the TCD portal);</p>
-<p>•   if the component is uploaded in a .zip format, it is recommended to have a text file describing what is included in the package/ provide reference to the code commit tags to find what is included in the package;</p>
-<p>•   do not delete/ edit/ create components/ folders in the artifactory. TCD Portal’s Product and Component sections must be used to create anything in artifactory;</p>
+<p>•   ensure that the component name also has information about its version</p>
+<p>•   ensure that the component format that you upload is as expected by Temenos Continuous Deployment - every product has a template overview page (see <a href="http://documentation.temenos.cloud/home/pdf/transact-components.pdf">here</a> the expected components&#39; format)</p>
+<p>•   ensure that the components are uploaded to the appropriate folders (the URL and folder names can be found from the component definition pages of the Temenos Continuous Deployment portal)</p>
+<p>•   if the component is uploaded in a .zip format, it is recommended to have a text file describing what is included in the package/ provide reference to the code commit tags to find what is included in the package</p>
+<p>•   do not delete/ edit/ create components/ folders in the artifactory. The Temenos Continuous Deployment Portal’s Product and Component sections must be used to create anything in artifactory</p>
 <p>•   our recommendation is to retain the last 25 components in every stage.</p>
 <p><br>
 </br></p>
@@ -307,7 +307,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li>DELETE _ PRODUCT</li>
 </ul>
 <p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
-</give><p><br></p>
+<p><br></p>
               <hr>
               
               <div id="disqus_thread"></div>
