--- a/home/techguides/manage-workflows.html
+++ b/home/techguides/manage-workflows.html
@@ -114,17 +114,17 @@
 <h1 id="create-workflow">Create workflow</h1>
 <p>To create your own workflow in the Temenos Continuous Deployment Platform you need to follow the below steps:</p>
 <ul>
-<li><p>select the <strong>Workflow</strong> tab from the left menu and click on <strong>New Workflow</strong>:
-<img src="images/workflow-tab.png" alt=""> </p>
+<li><p>select the <strong>Workflow</strong> tab from the left menu and click on <strong>New Workflow</strong>:</p>
+<p><img src="images/workflow-tab.png" alt=""> </p>
 </li>
-<li><p>a new window opens. Add a <strong>name</strong> and a <strong>description</strong> to the workflow:
-<img src="images/workflow-create-wf.png" alt=""> </p>
+<li><p>a new window opens. Add a <strong>name</strong> and a <strong>description</strong> to the workflow:</p>
+<p><img src="images/workflow-create-wf.png" alt=""> </p>
 </li>
-<li><p>to define the workflow, simply drag and drop the shapes onto the canvas and connect them with arrows:
-<img src="images/define-workflow.png" alt=""> </p>
+<li><p>to define the workflow, simply drag and drop the shapes onto the canvas and connect them with arrows:</p>
+<p><img src="images/define-workflow.png" alt=""> </p>
 </li>
-<li><p>to connect the elements click on Add Edge; to delete any edge or element, select the item first then click on Delete Selected:
-<img src="./images/add-edge.png" alt=""> </p>
+<li><p>to connect the elements click on Add Edge; to delete any edge or element, select the item first then click on Delete Selected:</p>
+<p><img src="images/add-edge.png" alt=""> </p>
 </li>
 <li><p>when the elements have been placed and connected accordingly, click Save Workflow. Based on the above diagram, a particular workflow will be sent to workflow service to proceed with the steps defined by the user</p>
 </li>
