--- a/home/techguides/factories.html
+++ b/home/techguides/factories.html
@@ -142,8 +142,8 @@
 <img src="images/factory-product-configuration.png" alt="factory-product-configuration"> </li>
 </ul>
 <h2 id="test-configuration">Test Configuration</h2>
-<p>The Test Configuration consists in in-build service tasks and is used to  trigger tests for a given factory-run, trigger export of application logs.
-Assuming that you select the Default Workflow, you need to fill in the following fields:</p>
+<p>The Test Configuration consists in in-build service tasks and is used to  trigger tests for a given factory-run, trigger export of application logs.</p>
+<p>Depending on you organisation settings, you may/ may not have a Default Workflow or the option to select from a list of workflows defined by the users from your organisation. During this phase, you have to fill in the Workflow steps - a sample which displays the steps (in that exact sequence) that are executed by the selected workflow. Assuming that you select the Default Workflow, you need to fill in the following fields:</p>
 <ul>
 <li><p><strong>Test template</strong>: specifies the template that is required to deploy a test environment that holds the testing framework and test scripts. This is needed to generalize the test tools as a template.</p>
 </li>
@@ -158,14 +158,20 @@ Test Stage: represents a stable version of components that is pre-tested from th
 </li>
 </ul>
 <p>At the end of this step, when the first round of tests is completed, the test VM will be deleted, but it will not stop the T24 environment (this will be done at the end of the workflow)</p>
-<p><img src="images/factory-test-configuration.png" alt="factory-product-configuration"> 
-<br>
+<p><img src="images/factory-test-configuration.png" alt="factory-product-configuration"> </p>
+<p>Assuming that you select a customized workflow with COB you need to fill in additional steps, such as:</p>
+<ul>
+<li>type in the ID of the TSA.SERVICE record for which COB has to be run. The id can be either group specific id (eg: COB-1, COB-001) , company specific id (eg: COB-GB0010001) or COB. Important: currently the platform can handle 20 agents at max, including the online services.</li>
+</ul>
+<p><br>
 </br></p>
 <h2 id="promotion-configuration">Promotion Configuration</h2>
 <p>This configuration enables the user to select all the required principle products along with the target stage to which they will be promoted after a successful factory run. In addition, the user can select the Test Components along with the target stage if they need promotion as well. 
 <img src="images/factory-promotion-configuration.png" alt="factory-promotion-configuration"></p>
+<blockquote><p>Note: it is not mandatory to fill in the Tests to Promote field and the associated Select target stage for Tests from the right side. </p>
+</blockquote>
 <h4 id="factory-scheduler">Factory Scheduler</h4>
-<p>A user has the privilege to configure the schedule of the factory run in order to automatically run the tests and have the results available daily</p>
+<p>A user has the privilege to configure the schedule of the factory run in order to automatically run the tests and have the results available daily.</p>
 <ul>
 <li>the scheduler can be configured to run one time per day</li>
 <li>if the factory run test is successful you can choose to stop/ or keep running the T24 environment</li>
