--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -94,8 +94,11 @@
 <p>Click <strong>New user</strong> button on the top-right corner:</p>
 <p><img src="D:\DocumentationPortal\temenos-platform-documentation\docfx_project\home\techguides\images\users-tab.png" alt=""></p>
 <p>This will create a new user in your organisation. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
-<blockquote><p><strong>Important!</strong>: It is the Organisation Admin&#39;s responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
+<blockquote><p><strong>Important!</strong>: It is the Organisation Admin&#39;s 
+responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
 </blockquote>
+<p>On their first login, all new users will be forced to reset the password that was initially created by the Organisation Admin.</p>
+<p><img src="images/user-change-password.png" alt="user-change-password"></p>
 <h1 id="user-roles-management">User Roles Management</h1>
 <p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
 <p>The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
