--- a/home/techguides/run-factory.html
+++ b/home/techguides/run-factory.html
@@ -81,7 +81,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h2 id="run-factory">Run Factory</h2>
 
-<p>After setting-up a factory (see configuration steps in <a href="factories.html#set-up-create-a-factory" target="blank"><b>this user guide</b></a>), go to <strong>Dashboard</strong> on the main menu and select the factory you created (in case you have more factories). </p>
+<p>After setting-up a factory (see configuration steps in <a href="./factories.md#set-up-create-a-factory" target="blank"><b>this user guide</b></a>), go to <strong>Dashboard</strong> on the main menu and select the factory you created (in case you have more factories). </p>
 <div class="NOTE"><h5>Note</h5><p>In order to run your factory, make sure first you select the stream and stage where you created the factory <em>(top right)</em>.</p>
 </div>
 <p>If the factory has never been run, you will notice the following message on the screen, under the respective factory: <em>The factory has never been run before. Please start the factory process now by clicking on the &quot;Run Now&quot; button.</em></p>
