--- a/home/toc.html
+++ b/home/toc.html
@@ -181,7 +181,7 @@
                     <a href="techguides/manage-workflows.html" name="" title="Manage Workflows">Manage Workflows</a>
                   </li>
                   <li>
-                    <a href="techguides/factories.html" name="" title="Manage Factories">Manage Factories</a>
+                    <a href="./techguides/automated-factories.md" name="" title="Manage Automated Factories">Manage Automated Factories</a>
                   </li>
                   <li>
                     <a href="techguides/manage-test-scripts.html" name="" title="Manage Test Scripts">Manage Test Scripts</a>
