--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -275,7 +275,7 @@
 </br></p>
 </li>
 </ul>
-<h1 id="how-a-bank-installs-updates-to-temenos-continuous-deployment-platform">How a bank installs updates to Temenos Continuous Deployment Platform</h1>
+<h1 id="how-temenos-continuous-deployment-platform-installs-updates">How Temenos Continuous Deployment Platform installs updates</h1>
 <p> When a T24 update is deployed into a Temenos Continuous Deployment environment, either via the <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html">Deploy button</a> or during a <a href="http://documentation.temenos.cloud/home/techguides/run-factory.html">factory run</a>, the following steps take place in sequence in the background.</p>
 <blockquote><p><strong>Note</strong>: <strong>$T24_HOME corresponds to UD folder.</strong> The environment variables and paths correspond to Linux based environment. Nonetheless, the same set of steps are executed for Windows templates. $T24_HOME corresponds to the path to UD folder. The $T24_HOME/&amp;SAVEDLISTS&amp; contains the UpdateLog and the REL files corresponding to the updates. </p>
 <p>Please check the files under $T24_HOME/&amp;SAVEDLISTS&amp; along with TAFJ/Log folder in SFTP in case of update failures.</p>
