--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -82,6 +82,21 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
+<h1 id="202007"><strong>202007</strong></h1>
+<p><strong>InfraBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: TBA
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA</p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Automate enablement of HTTPS for external access to Gitlab environment repos</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Gitlab will be now accessible through HTTPS as well (on top of SSH) for external accesses. 
+<br>
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Factories bug fixes</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users are not able to edit existing factories with a scheduler having start date set in the past </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users are able to Enable/ Disable the factory Scheduler 
+<br>
+</br> </p>
+<h2 id="admin-portal">Admin Portal</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; 1. UI has been reviewed in order to provide more information in single screen.</p>
 <h1 id="2020061"><strong>202006.1</strong></h1>
 <p><strong>InfraBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: TBA
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA</p>
@@ -90,7 +105,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- for security reasons, all application environments now communicate with the Temenos Continuous Deployment infrastructure VMs only through private IPs 
 <br>
 </br> </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Artifactory access</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Artifactory access</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the JFrog Artifactory access through private IP is now done on HTTPs and not TLS
 <br>
 </br> </p>
