--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -83,20 +83,24 @@
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
 <h1 id="202007"><strong>202007</strong></h1>
-<p><strong>InfraBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: TBA
-&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA</p>
+<p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202007.RC9
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 209 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202007** |<strong>&nbsp; **WorkflowServiceTag</strong>: 202007.RC8 </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Automate enablement of HTTPS for external access to Gitlab environment repos</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Gitlab will be now accessible through HTTPS as well (on top of SSH) for external accesses. 
 <br>
 </br> </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Factories bug fixes</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Enhancements to factory definition, especially Scheduler</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users are not able to edit existing factories with a scheduler having start date set in the past </p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users are able to Enable/ Disable the factory Scheduler 
 <br>
 </br> </p>
 <h2 id="admin-portal">Admin Portal</h2>
-<p>&nbsp;&nbsp;&nbsp;&nbsp; 1. UI has been reviewed in order to provide more information in single screen.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; <strong>1. UI has been reviewed in order to provide more information in single screen.</strong>
+<br>
+</br> 
+<br>
+</br> </p>
 <h1 id="2020061"><strong>202006.1</strong></h1>
 <p><strong>InfraBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: TBA
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA</p>
