--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -90,12 +90,12 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Gitlab will be now accessible through HTTPS as well (on top of SSH) for external accesses. 
 <br>
 </br> </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Enhancements to factory definition, especially Scheduler</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Enhancements to the factory definition</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users are not able to edit existing factories with a scheduler having start date set in the past </p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users are able to Enable/ Disable the factory Scheduler 
 <br>
 </br> </p>
-<h2 id="admin-portal">Admin Portal</h2>
+<h2 id="general-enhancements">General enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp; <strong>1. UI has been reviewed in order to provide more information in single screen.</strong>
 <br>
 </br> 
