--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -101,6 +101,20 @@
 </br> 
 <br>
 </br> </p>
+<h1 id="2020061"><strong>202006.1</strong></h1>
+<p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202006.1.RC2
+&nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 1876 &nbsp;<strong>|</strong>&nbsp;<strong>ControllerBuild</strong>: 187 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202006.1 &nbsp;<strong>|</strong>&nbsp; <strong>WorkflowServiceTar</strong>: 202006.1.RC2</p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Environment enhancements</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- for security reasons, all application environments now communicate with the Temenos Continuous Deployment infrastructure VMs only through private IPs 
+<br>
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Artifactory access</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the JFrog Artifactory access through private IP is now done on HTTPs and not TLS
+<br>
+</br> 
+<br>
+</br> </p>
 <h1 id="202006"><strong>202006</strong></h1>
 <p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 202006.RC6
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 176  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202006</p>
