--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -103,7 +103,7 @@
 </br> </p>
 <h1 id="2020061"><strong>202006.1</strong></h1>
 <p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202006.1.RC2
-&nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 1876 &nbsp;<strong>|</strong>&nbsp;<strong>ControllerBuild</strong>: 187 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202006.1 &nbsp;<strong>|</strong>&nbsp; <strong>WorkflowServiceTar</strong>: 202006.1.RC2</p>
+&nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 1876 &nbsp;<strong>|</strong>&nbsp;<strong>ControllerBuild</strong>: 187 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202006.1 &nbsp;<strong>|</strong>&nbsp; <strong>WorkflowServiceTag</strong>: 202006.1.RC2</p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Environment enhancements</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- for security reasons, all application environments now communicate with the Temenos Continuous Deployment infrastructure VMs only through private IPs 
